feat: add configurable import worker limit